Fixed alignment isssue from the sync library notice.

--- a/inc/assets/css/admin.css
+++ b/inc/assets/css/admin.css
@@ -1976,6 +1976,7 @@ body.loading-content .select-page-builder {
 .astra-sites-sync-library-message.notice p {
     margin: .3em 0;
     font-size: 12px;
+    line-height: normal;
 }
 
 .astra-sites-sync-library-message.notice .notice-dismiss {
